--- a/package.json
+++ b/package.json
@@ -6,30 +6,49 @@
     "dotenv": "5.0.1",
     "history": "3.5.1",
     "js-beautify": "^1.7.5",
+    "husky": "^0.14.3",
+    "lodash": "^4.17.10",
+    "normalizr": "^3.2.4",
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
+    "lint-staged": "^7.0.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-helmet": "^5.2.0",
+    "react-redux": "^5.0.7",
+    "prettier": "^1.12.0",
     "react-router": "3.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1",
     "styled-components": "^3.3.0",
     "swagger-js-codegen": "^1.12.0"
   },
   "scripts": {
     "start": "yarn generate-api && react-scripts start",
     "build": "yarn generate-api && react-scripts build",
-    "generate-api": "node codegen/generate.js"
+    "generate-api": "node codegen/generate.js",
+    "precommit": "lint-staged",
+    "lint": "eslint src"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^7.2.3",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.48.0",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.8.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json}": [
+      "eslint",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
