Setup pre ssr * doinstalovanie potrebnych packagov * vytvorenie skriptov * doplnene env premenne

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,4 @@
 REACT_APP_API_BASE_URL=http://80.211.222.212:9999/api
+SSR_PORT=3001
+#SSR_SOCK=server.sock
+SSR_PUBLIC_FOLDER=../frontend_master_eshop/build
