--- a/package.json
+++ b/package.json
@@ -3,37 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-register": "^6.26.0",
     "dotenv": "5.0.1",
-    "history": "3.5.1",
-    "js-beautify": "^1.7.5",
+    "express": "^4.16.3",
     "husky": "^0.14.3",
+    "ignore-styles": "^5.0.1",
+    "js-beautify": "^1.7.5",
+    "lint-staged": "^7.0.4",
     "lodash": "^4.17.10",
+    "morgan": "^1.9.0",
     "normalizr": "^3.2.4",
     "polished": "^1.9.2",
+    "prettier": "^1.12.0",
     "prop-types": "^15.6.1",
-    "lint-staged": "^7.0.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
-    "prettier": "^1.12.0",
     "react-router": "3.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
+    "sanitize.css": "^5.0.0",
     "styled-components": "^3.3.0",
     "swagger-js-codegen": "^1.12.0"
   },
   "scripts": {
     "start": "yarn generate-api && react-scripts start",
+    "start:server": "NODE_ENV=development nodemon --exec babel-node server/index.js",
     "build": "yarn generate-api && react-scripts build",
+    "production": "NODE_ENV=production node server/index.js",
     "generate-api": "node codegen/generate.js",
     "precommit": "lint-staged",
     "lint": "eslint src"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -42,7 +49,8 @@
     "eslint-plugin-flowtype": "^2.48.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.8.2"
+    "eslint-plugin-react": "^7.8.2",
+    "nodemon": "^1.17.5"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json}": [
