--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-register": "^6.26.0",
     "dotenv": "5.0.1",
     "express": "^4.16.3",
