--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
-    "sanitize.css": "^5.0.0",
+    "serialize-javascript": "^1.5.0",
     "styled-components": "^3.3.0",
     "swagger-js-codegen": "^1.12.0"
   },
